# Context_Packer

./: .gitignore  README.md  pyproject.toml
src/contextpacker/: __main__.py
src/contextpacker/app/: grid_bg.py  theme.py  tk_app.py
src/contextpacker/core/: cancel.py  config.py  errors.py  model.py  pipeline_build.py  pipeline_emit.py  pipeline_enumerate.py  pipeline_filter.py  runner.py
src/contextpacker/io/: clipboard.py  file_read.py  gitignore.py  manifest.py  open_folder.py  out_paths.py  write_atomic.py
src/contextpacker/policy/: ignore_spec.py  presets.py  selection.py
src/contextpacker/render/: diff_render.py  transcript_render.py  tree_render.py
